--- a/.github/workflows/demos.yml
+++ b/.github/workflows/demos.yml
@@ -34,10 +34,15 @@ jobs:
         run: pnpm install
       - name: Build
         run: pnpm build
+      - name: Prepare
+        run: |
+            mkdir _deploy
+            mkdir _deploy/webpack-app
+            cp -R demos/webpack-app/public/* _deploy/webpack-app
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
-          path: demos
+          path: _deploy
       - name: Deploy
         id: deployment
         uses: actions/deploy-pages@v1
